# liblorie

./: meson.build  meson_options.txt
android/: lorie_app.c  meson.build
protocol/: lorie.xml  meson.build
src/: buffer.c  client.c  lorie-buffer.h  lorie-client.h  lorie-server.h  meson.build  server.c
src/renderer/: gl.c  lorie-renderer.h  renderer.c
test/: X11.c  cursor.h  meson.build  test-client.c  test-server.c  x11-window.c
xf86-mixed-lorie/: config.h  dummy.h  dummy_cursor.c  dummy_driver.c  dummy_input.c  dummy_input.h  meson.build  post_install.sh
